testdata/corset/invalid/permute_invalid_07.lisp
;;error:4:22-23:missing sort direction
(module m1)
(defcolumns (X :i16))
(defpermutation (Z) (X))
